--- a/data/Finetune_Bert.ipynb
+++ b/data/Finetune_Bert.ipynb
@@ -2,125 +2,300 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "mounted-relation",
+   "execution_count": 1,
+   "id": "bound-founder",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /usr/local/lib/python3.9/dist-packages (1.12.1+cu116)\n",
+      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch) (4.4.0)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: transformers in /usr/local/lib/python3.9/dist-packages (4.21.3)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.9/dist-packages (from transformers) (4.64.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.9/dist-packages (from transformers) (2022.10.31)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.9/dist-packages (from transformers) (5.4.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.9/dist-packages (from transformers) (1.23.4)\n",
+      "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from transformers) (3.9.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/dist-packages (from transformers) (23.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /usr/local/lib/python3.9/dist-packages (from transformers) (0.12.0)\n",
+      "Requirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from transformers) (2.28.2)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.13,>=0.11.1 in /usr/local/lib/python3.9/dist-packages (from transformers) (0.12.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.9/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (4.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/lib/python3/dist-packages (from requests->transformers) (2019.11.28)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/lib/python3/dist-packages (from requests->transformers) (2.8)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.9/dist-packages (from requests->transformers) (2.1.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.9/dist-packages (from requests->transformers) (1.26.14)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement json (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for json\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torch\n",
+    "!pip install transformers\n",
+    "!pip install json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7eae93fc-7507-4054-aef5-572c7a16ea38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from transformers import BertTokenizerFast, BertForTokenClassification, Trainer, TrainingArguments\n",
-    "from torch.utils.data import Dataset\n",
     "import json\n",
-    "\n"
+    "import torch\n",
+    "from transformers import BertTokenizer, BertForTokenClassification, AdamW"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "applicable-antique",
+   "execution_count": 33,
+   "id": "94dbd6e2-0c2d-4e29-8f05-54b4e6792359",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt from cache at /root/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/added_tokens.json from cache at None\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/special_tokens_map.json from cache at None\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json from cache at /root/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.76ea01b4b85ac16e2cec55c398cba7a943d89ab21dfdd973f6630a152e4b9aed\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /root/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "Model config BertConfig {\n",
+      "  \"_name_or_path\": \"bert-base-uncased\",\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"gradient_checkpointing\": false,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.21.3\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /root/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "Model config BertConfig {\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"gradient_checkpointing\": false,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"id2label\": {\n",
+      "    \"0\": \"LABEL_0\",\n",
+      "    \"1\": \"LABEL_1\",\n",
+      "    \"2\": \"LABEL_2\"\n",
+      "  },\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"label2id\": {\n",
+      "    \"LABEL_0\": 0,\n",
+      "    \"LABEL_1\": 1,\n",
+      "    \"LABEL_2\": 2\n",
+      "  },\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.21.3\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading weights file https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin from cache at /root/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Configuration saved in pragmatic_markers_model/config.json\n",
+      "Model weights saved in pragmatic_markers_model/pytorch_model.bin\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Accuracy: 0.9990\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load the dataset\n",
-    "with open('filtered_utterances_ft_data.json', 'r') as file:\n",
-    "    data = json.load(file)\n",
+    "import json\n",
+    "import torch\n",
+    "import random \n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from transformers import BertTokenizer, BertForTokenClassification, AdamW\n",
+    "\n",
+    "# Load the labeled dataset\n",
+    "with open(\"filtered_utterances_ft_data.json\", \"r\") as f:\n",
+    "    labeled_data = json.load(f)\n",
+    "\n",
+    "# Load the pragmatic marker lists\n",
+    "with open(\"hedging_markers.json\", \"r\") as f:\n",
+    "    hedging_markers = json.load(f)\n",
+    "\n",
+    "with open(\"authority_markers.json\", \"r\") as f:\n",
+    "    authority_markers = json.load(f)\n",
+    "\n",
+    "# Prepare the data for training\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "labels = [\"none\", \"hedge\", \"authority\"]\n",
+    "label_map = {label: i for i, label in enumerate(labels)}\n",
+    "\n",
+    "# Split the dataset into train and eval subsets\n",
+    "random.shuffle(labeled_data)\n",
+    "train_size = int(0.8 * len(labeled_data))\n",
+    "train_data = labeled_data[:train_size]\n",
+    "eval_data = labeled_data[train_size:]\n",
+    "\n",
+    "max_length = 512  # Set the maximum sequence length to 512\n",
+    "\n",
+    "train_dataset = []\n",
+    "for example in train_data:\n",
+    "    statement = example[\"statement\"]\n",
+    "    encoding = tokenizer.encode_plus(\n",
+    "        statement,\n",
+    "        max_length=max_length,\n",
+    "        padding=\"max_length\",\n",
+    "        truncation=True,\n",
+    "        return_tensors=\"pt\",\n",
+    "    )\n",
+    "    input_ids = encoding[\"input_ids\"].squeeze()\n",
+    "    attention_mask = encoding[\"attention_mask\"].squeeze()\n",
+    "\n",
+    "    label_ids = [label_map[\"none\"]] * max_length  # Initialize label_ids with \"none\"\n",
+    "    for term, label in example[\"matched_terms\"].items():\n",
+    "        if label != \"none\":\n",
+    "            term_tokens = tokenizer.tokenize(term)\n",
+    "            term_indices = [i for i, token_id in enumerate(input_ids) if tokenizer.decode([token_id]).strip().lower() in term_tokens]\n",
+    "            for index in term_indices:\n",
+    "                label_ids[index] = label_map[label]\n",
+    "\n",
+    "    train_dataset.append({\n",
+    "        \"input_ids\": input_ids,\n",
+    "        \"attention_mask\": attention_mask,\n",
+    "        \"labels\": torch.tensor(label_ids),\n",
+    "    })\n",
     "    \n",
-    "# Load the lists of pragmatic markers\n",
-    "with open('hedging_markers.json', 'r') as file:\n",
-    "    hedging_markers = json.load(file)\n",
+    "eval_dataset = []\n",
+    "for example in eval_data:\n",
+    "    statement = example[\"statement\"]\n",
+    "    encoding = tokenizer.encode_plus(\n",
+    "        statement,\n",
+    "        max_length=max_length,\n",
+    "        padding=\"max_length\",\n",
+    "        truncation=True,\n",
+    "        return_tensors=\"pt\",\n",
+    "    )\n",
+    "    input_ids = encoding[\"input_ids\"].squeeze()\n",
+    "    attention_mask = encoding[\"attention_mask\"].squeeze()\n",
     "\n",
-    "with open('authority_markers.json', 'r') as file:\n",
-    "    authority_markers = json.load(file)\n",
+    "    label_ids = [label_map[\"none\"]] * max_length  # Initialize label_ids with \"none\"\n",
+    "    for term, label in example[\"matched_terms\"].items():\n",
+    "        if label != \"none\":\n",
+    "            term_tokens = tokenizer.tokenize(term)\n",
+    "            term_indices = [i for i, token_id in enumerate(input_ids) if tokenizer.decode([token_id]).strip().lower() in term_tokens]\n",
+    "            for index in term_indices:\n",
+    "                label_ids[index] = label_map[label]\n",
     "\n",
-    "# Define label mapping\n",
-    "label_dict = {'O': 0, 'B-authority': 1, 'I-authority': 2, 'B-hedge': 3, 'I-hedge': 4}\n",
-    "label_dict_inv = {v: k for k, v in label_dict.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "postal-jimmy",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prepare the dataset for token classification\n",
-    "class UtteranceTokenDataset(Dataset):\n",
-    "    def __init__(self, entries, hedging_markers, authority_markers):\n",
-    "        self.entries = entries\n",
-    "        self.hedging_markers = set(hedging_markers)\n",
-    "        self.authority_markers = set(authority_markers)\n",
-    "        self.tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
+    "    eval_dataset.append({\n",
+    "        \"input_ids\": input_ids,\n",
+    "        \"attention_mask\": attention_mask,\n",
+    "        \"labels\": torch.tensor(label_ids),\n",
+    "    })    \n",
+    "    \n",
+    "    \n",
     "\n",
-    "    def __len__(self):\n",
-    "        return len(self.entries)\n",
+    "# Set up the model and optimizer\n",
+    "model = BertForTokenClassification.from_pretrained(\"bert-base-uncased\", num_labels=len(labels))\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
     "\n",
-    "    def __getitem__(self, idx):\n",
-    "        entry = self.entries[idx]\n",
-    "        tokens = self.tokenizer.tokenize(entry['statement'])\n",
-    "        labels = ['O'] * len(tokens)  # Default label is 'O'\n",
+    "# Fine-tune the model\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
     "\n",
-    "        # Apply labels based on hedging and authority markers\n",
-    "        for i, token in enumerate(tokens):\n",
-    "            if token in self.hedging_markers:\n",
-    "                labels[i] = 'B-hedge'  # Beginning of a hedging marker\n",
-    "            elif token in self.authority_markers:\n",
-    "                labels[i] = 'B-authority'  # Beginning of an authority marker\n",
+    "batch_size = 8\n",
+    "epochs = 3\n",
     "\n",
-    "        label_ids = [label_dict[label] for label in labels]\n",
+    "for epoch in range(epochs):\n",
+    "    for i in range(0, len(dataset), batch_size):\n",
+    "        batch = dataset[i:i+batch_size]\n",
     "        \n",
-    "        encoding = self.tokenizer(entry['statement'], truncation=True, padding='max_length', max_length=512, is_split_into_words=True)\n",
-    "        encoding['labels'] = label_ids\n",
-    "        return encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fixed-packing",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert the data into a PyTorch Dataset\n",
-    "dataset = UtteranceTokenDataset(data, hedging_markers, authority_markers)\n",
-    "train_size = int(0.8 * len(dataset))\n",
-    "test_size = len(dataset) - train_size\n",
-    "train_dataset, test_dataset = torch.utils.data.random_split(dataset, [train_size, test_size])\n",
+    "        input_ids = torch.stack([example[\"input_ids\"] for example in batch]).to(device)\n",
+    "        attention_mask = torch.stack([example[\"attention_mask\"] for example in batch]).to(device)\n",
+    "        labels = torch.stack([example[\"labels\"] for example in batch]).to(device)\n",
     "\n",
-    "# Load BERT for token classification\n",
-    "model = BertForTokenClassification.from_pretrained('bert-base-uncased', num_labels=len(label_dict))\n",
+    "        model.zero_grad()\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        loss = outputs.loss\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "\n",
-    "# Define training arguments\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
-    "    num_train_epochs=3,\n",
-    "    per_device_train_batch_size=8,\n",
-    "    per_device_eval_batch_size=16,\n",
-    "    warmup_steps=500,\n",
-    "    weight_decay=0.01,\n",
-    "    logging_dir='./logs',\n",
-    "    logging_steps=10,\n",
-    ")\n",
-    "\n",
-    "# Initialize the Trainer\n",
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=train_dataset,\n",
-    "    eval_dataset=test_dataset\n",
-    ")\n",
-    "\n",
-    "# Train the model\n",
-    "trainer.train()\n",
+    "# Save the fine-tuned model\n",
+    "model.save_pretrained(\"pragmatic_markers_model\")\n",
     "\n",
     "# Evaluate the model\n",
-    "trainer.evaluate()"
+    "model.eval()\n",
+    "correct_predictions = 0\n",
+    "total_predictions = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for example in eval_dataset:\n",
+    "        input_ids = example[\"input_ids\"].unsqueeze(0).to(device)\n",
+    "        attention_mask = example[\"attention_mask\"].unsqueeze(0).to(device)\n",
+    "        labels = example[\"labels\"].unsqueeze(0).to(device)\n",
+    "\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        predictions = outputs.logits.argmax(dim=-1).squeeze().tolist()\n",
+    "\n",
+    "        correct_predictions += sum(p == l for p, l in zip(predictions, labels.squeeze().tolist()) if l != -100)\n",
+    "        total_predictions += len([p for p, l in zip(predictions, labels.squeeze().tolist()) if l != -100])\n",
+    "\n",
+    "accuracy = correct_predictions / total_predictions\n",
+    "print(f\"Evaluation Accuracy: {accuracy:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbdcfc46-3bb5-4b10-992b-37b780383f94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -134,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
