updated embedding eval

--- a/embedding_evaluation.ipynb
+++ b/embedding_evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,18 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mwise/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import h5py\n",
@@ -164,14 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1011,48 +995,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'transcript_id': b'CNN-195620', 'statement_id': b'5c003a93-ed88-429d-a32b-d6914871c950', 'original_string': '\"None\"\\n\"Was nominated to become NATO\\'s supreme commander as WELL. He has denied any wrongdoing. So, how are these people linked to the scandal? How are they ALL connected? Follow us. We\\'re going to try to explain this. General Petraeus resigned after admitting to having an extramarital affair with his biographer Paula Broadwell. The affair was uncovered because a friend of Petraeus, Jill Kelley, asked the FBI to investigate harassing e-mails she was receiving from Broadwell. WELL KNOW it\\'s come to light that there are ALLEGEDLY inappropriate e-mails between Jill Kelley and General Allen. In addition, \"The Wall Street Journal\" now saying that the FBI agent who initiated, he initiated the investigation at Kelley\\'s request, he is now under scrutiny. The agent has not been identified but he ALLEGEDLY sent Kelley shirtless photos of himself. Are you following us here? It ALL started with a complaint ABOUT harassing e-mails. Here\\'s what we KNOW ABOUT the woman who made that complaint, Jill Kelley. She is married to a cancer surgeon. She has three daughters. She lives in Tampa. Very WELL-KNOWN among Washington social circles. In a statement, Kelley and her husband, Scott, said they have been friends with General David Petraeus and his family for more than five years. Friends describe Kelley as FEELING like an innocent victim, but a source says the e-mails accuse Kelley of flirting with generals at MacDill Air Force Base in Tampa. Both General Allen and General Petraeus were previously stationed there. So, how does this impact the -- a lot of careers of these two generals, but also implications as WELL. Defense Secretary Leon Panetta has now asked that General John Allen\\'s nomination to become NATO supreme commander be put on hold. As for General Petraeus, Panetta was asked whether there were any indications that his affair started when he was still in active duty. Listen.\"', 'tokens': ['[CLS]', '\"', 'none', '\"', '\"', 'was', 'nominated', 'to', 'become', 'nato', \"'\", 's', 'supreme', 'commander', 'as', 'well', '.', 'he', 'has', 'denied', 'any', 'wrong', '##do', '##ing', '.', 'so', ',', 'how', 'are', 'these', 'people', 'linked', 'to', 'the', 'scandal', '?', 'how', 'are', 'they', 'all', 'connected', '?', 'follow', 'us', '.', 'we', \"'\", 're', 'going', 'to', 'try', 'to', 'explain', 'this', '.', 'general', 'petra', '##eus', 'resigned', 'after', 'admitting', 'to', 'having', 'an', 'extra', '##mar', '##ital', 'affair', 'with', 'his', 'biographer', 'paula', 'broad', '##well', '.', 'the', 'affair', 'was', 'uncovered', 'because', 'a', 'friend', 'of', 'petra', '##eus', ',', 'jill', 'kelley', ',', 'asked', 'the', 'fbi', 'to', 'investigate', 'hara', '##ssing', 'e', '-', 'mail', '##s', 'she', 'was', 'receiving', 'from', 'broad', '##well', '.', 'well', 'know', 'it', \"'\", 's', 'come', 'to', 'light', 'that', 'there', 'are', 'allegedly', 'inappropriate', 'e', '-', 'mail', '##s', 'between', 'jill', 'kelley', 'and', 'general', 'allen', '.', 'in', 'addition', ',', '\"', 'the', 'wall', 'street', 'journal', '\"', 'now', 'saying', 'that', 'the', 'fbi', 'agent', 'who', 'initiated', ',', 'he', 'initiated', 'the', 'investigation', 'at', 'kelley', \"'\", 's', 'request', ',', 'he', 'is', 'now', 'under', 'scrutiny', '.', 'the', 'agent', 'has', 'not', 'been', 'identified', 'but', 'he', 'allegedly', 'sent', 'kelley', 'shirt', '##less', 'photos', 'of', 'himself', '.', 'are', 'you', 'following', 'us', 'here', '?', 'it', 'all', 'started', 'with', 'a', 'complaint', 'about', 'hara', '##ssing', 'e', '-', 'mail', '##s', '.', 'here', \"'\", 's', 'what', 'we', 'know', 'about', 'the', 'woman', 'who', 'made', 'that', 'complaint', ',', 'jill', 'kelley', '.', 'she', 'is', 'married', 'to', 'a', 'cancer', 'surgeon', '.', 'she', 'has', 'three', 'daughters', '.', 'she', 'lives', 'in', 'tampa', '.', 'very', 'well', '-', 'known', 'among', 'washington', 'social', 'circles', '.', 'in', 'a', 'statement', ',', 'kelley', 'and', 'her', 'husband', ',', 'scott', ',', 'said', 'they', 'have', 'been', 'friends', 'with', 'general', 'david', 'petra', '##eus', 'and', 'his', 'family', 'for', 'more', 'than', 'five', 'years', '.', 'friends', 'describe', 'kelley', 'as', 'feeling', 'like', 'an', 'innocent', 'victim', ',', 'but', 'a', 'source', 'says', 'the', 'e', '-', 'mail', '##s', 'accuse', 'kelley', 'of', 'flirting', 'with', 'generals', 'at', 'mac', '##di', '##ll', 'air', 'force', 'base', 'in', 'tampa', '.', 'both', 'general', 'allen', 'and', 'general', 'petra', '##eus', 'were', 'previously', 'stationed', 'there', '.', 'so', ',', 'how', 'does', 'this', 'impact', 'the', '-', '-', 'a', 'lot', 'of', 'careers', 'of', 'these', 'two', 'generals', ',', 'but', 'also', 'implications', 'as', 'well', '.', 'defense', 'secretary', 'leon', 'pan', '##etta', 'has', 'now', 'asked', 'that', 'general', 'john', 'allen', \"'\", 's', 'nomination', 'to', 'become', 'nato', 'supreme', 'commander', 'be', 'put', 'on', 'hold', '.', 'as', 'for', 'general', 'petra', '##eus', ',', 'pan', '##etta', 'was', 'asked', 'whether', 'there', 'were', 'any', 'indications', 'that', 'his', 'affair', 'started', 'when', 'he', 'was', 'still', 'in', 'active', 'duty', '.', 'listen', '.', '\"', '[SEP]'], 'embeddings': array([[-1.0149246 , -0.5655816 , -0.77891797, ..., -0.1368693 ,\n",
-      "         0.77434   ,  0.4067582 ],\n",
-      "       [-0.90694046, -0.05165518,  0.01481882, ...,  0.3393906 ,\n",
-      "         1.5614274 , -0.39532268],\n",
-      "       [-0.9909597 ,  0.12574707,  0.72924405, ...,  0.62883085,\n",
-      "         0.8288686 ,  0.2788665 ],\n",
-      "       ...,\n",
-      "       [-0.16881981, -0.18630551, -0.10006068, ...,  0.46550298,\n",
-      "        -0.00351965, -0.87750113],\n",
-      "       [-0.20333467, -0.41220668,  0.16390029, ...,  0.21007699,\n",
-      "         0.29031524, -0.50496376],\n",
-      "       [-0.19039232, -0.33507127, -0.35884425, ...,  0.7713388 ,\n",
-      "        -0.12824059, -0.59227747]], dtype=float32), 'matched_terms': {'allegedly': 'hedge'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = 'data/contextual_embeddings_with_metadata.h5'\n",
-    "samples = []\n",
-    "with h5py.File(data, 'r') as f:\n",
-    "    for idx in f.keys():\n",
-    "        group = f[idx]\n",
-    "        matched_terms = eval(group['matched_terms'][()].decode('utf-8'))\n",
-    "        hedge_terms = {term: value for term, value in matched_terms.items() if value == \"hedge\"}\n",
-    "        if hedge_terms:\n",
-    "            hedged_item = {\n",
-    "                'transcript_id': group['transcript_id'][()],\n",
-    "                'statement_id': group['statement_id'][()],\n",
-    "                'original_string': group['original_string'][()].decode('utf-8'),\n",
-    "                'tokens': group['tokens'][()].astype(str).tolist(),\n",
-    "                'embeddings': group['embeddings'][()],\n",
-    "                'matched_terms': hedge_terms\n",
-    "            }\n",
-    "            samples.append(hedged_item)\n",
-    "print(samples[1])"
+    "data_path = 'data/contextual_embeddings_with_metadata.h5'\n",
+    "import h5py\n",
+    "\n",
+    "def get_h5py_data(data):\n",
+    "    samples = []\n",
+    "    with h5py.File(data, 'r') as f:\n",
+    "        for idx in f.keys():\n",
+    "            group = f[idx]\n",
+    "            matched_terms = eval(group['matched_terms'][()].decode('utf-8'))\n",
+    "            hedge_terms = {term: value for term, value in matched_terms.items() if value == \"hedge\"}\n",
+    "            if hedge_terms:\n",
+    "                hedged_item = {\n",
+    "                    'transcript_id': group['transcript_id'][()],\n",
+    "                    'statement_id': group['statement_id'][()],\n",
+    "                    'original_string': group['original_string'][()].decode('utf-8'),\n",
+    "                    'tokens': group['tokens'][()].astype(str).tolist(),\n",
+    "                    'embeddings': group['embeddings'][()],\n",
+    "                    'matched_terms': hedge_terms\n",
+    "                }\n",
+    "                samples.append(hedged_item)\n",
+    "    return samples\n",
+    "data = get_h5py_data(data_path)"
    ]
   },
   {
@@ -1126,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1181,39 +1149,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'vectors' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m similar_words\n\u001b[1;32m     14\u001b[0m corpus \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlist\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mof\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwords\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrom\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlarger\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcorpus\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m---> 15\u001b[0m similar_words \u001b[38;5;241m=\u001b[39m find_similar_words(corpus, model, \u001b[43mvectors\u001b[49m, similar_dimensions)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSimilar words:\u001b[39m\u001b[38;5;124m\"\u001b[39m, similar_words)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'vectors' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maybe']\n"
      ]
     }
    ],
    "source": [
-    "def find_similar_n_grams(example, model, hedge_vectors, similar_dimensions, threshold=0.5, n=1):\n",
-    "    \n",
-    "    similar_words = []\n",
-    "    for word in corpus:\n",
-    "        if word in model:\n",
-    "            word_vector = model[word]\n",
-    "            similar_count = 0\n",
-    "            for dim in similar_dimensions:\n",
-    "                if word_vector[dim] > threshold:\n",
-    "                    similar_count += 1\n",
-    "            if similar_count / len(similar_dimensions) > threshold:\n",
-    "                similar_words.append(word)\n",
-    "    return similar_words\n",
+    "import numpy as np\n",
+    "from scipy.spatial.distance import cosine\n",
     "\n",
-    "corpus = [\"list\", \"of\", \"words\", \"from\", \"the\", \"larger\", \"corpus\"]\n",
-    "similar_words = find_similar_words(corpus, model, vectors, similar_dimensions)\n",
-    "print(\"Similar words:\", similar_words)"
+    "def find_similar_ngrams(example, hedge_vectors, similar_dimensions, n=3, threshold=0.75):\n",
+    "    example_tokens = example['tokens']\n",
+    "    example_embeddings = example['embeddings']\n",
+    "    example_id = example['statement_id']\n",
+    "    similar_ngrams = []\n",
+    "    \n",
+    "    # Extract the embeddings for the similar dimensions\n",
+    "    example_embeddings_reduced = example_embeddings[:, similar_dimensions]\n",
+    "    \n",
+    "    def n_grams(tokens, embeddings, n):\n",
+    "        \"\"\"Generate n-grams and their corresponding average embeddings.\"\"\"\n",
+    "        for i in range(len(tokens) - n + 1):\n",
+    "            yield tokens[i:i+n], np.mean(embeddings[i:i+n], axis=0)\n",
+    "    \n",
+    "    for tokens, avg_embedding in n_grams(example_tokens, example_embeddings_reduced, n):\n",
+    "        similarity = 0\n",
+    "        for hedge_vector in hedge_vectors:\n",
+    "            hedge_vector_reduced = hedge_vector[similar_dimensions]\n",
+    "            similarity += (1 - cosine(avg_embedding, hedge_vector_reduced))\n",
+    "        if (similarity / len(hedge_vectors)) > threshold:\n",
+    "            similar_ngrams.append(\" \".join(tokens))\n",
+    "    \n",
+    "    return similar_ngrams\n",
+    "\n",
+    "# Example usage\n",
+    "threshold = 0.85\n",
+    "\n",
+    "for example in data:\n",
+    "    # print(example['original_string'])\n",
+    "    similar_words = find_similar_ngrams(example, hedge_vectors, similar_dimensions_hedge, n = 1, threshold=threshold)\n",
+    "    if len(similar_words) > 0:\n",
+    "        print(similar_words)"
    ]
   },
   {
@@ -1389,6 +1371,20 @@
     "                print(f\"{word} {i+1},{j+1}: {cat1}/{cat2} Cosine similarity: {similarity:.4f}\")\n",
     "            else:\n",
     "                print(f\"One or both of the texts {i+1} and {j+1} do not contain the token 'know'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.8926\n",
+    "0.7740\n",
+    "0.3465\n",
+    "0.8332\n",
+    "0.4173\n",
+    "0.3577"
    ]
   }
  ],
