formatting cleanup, updated ipynb

--- a/filtered_utterance_dataset_creation.ipynb
+++ b/filtered_utterance_dataset_creation.ipynb
@@ -756,112 +756,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "about: none percentage: 91.55% \n",
-      " * h/a_count: 6\n",
-      " * none_count: 65\n",
+      "know: none percentage: 51.61% \n",
+      " * h/a_count: 30\n",
+      " * none_count: 32\n",
       "\n",
-      "well: none percentage: 83.93% \n",
-      " * h/a_count: 9\n",
-      " * none_count: 47\n",
+      "about: none percentage: 91.18% \n",
+      " * h/a_count: 3\n",
+      " * none_count: 31\n",
       "\n",
-      "know: none percentage: 44.83% \n",
-      " * h/a_count: 32\n",
+      "well: none percentage: 89.66% \n",
+      " * h/a_count: 3\n",
       " * none_count: 26\n",
       "\n",
-      "think: none percentage: 34.15% \n",
-      " * h/a_count: 27\n",
-      " * none_count: 14\n",
+      "could: none percentage: 57.14% \n",
+      " * h/a_count: 12\n",
+      " * none_count: 16\n",
       "\n",
-      "around: none percentage: 90.00% \n",
-      " * h/a_count: 1\n",
-      " * none_count: 9\n",
+      "think: none percentage: 22.92% \n",
+      " * h/a_count: 37\n",
+      " * none_count: 11\n",
       "\n",
-      "believe: none percentage: 61.54% \n",
-      " * h/a_count: 5\n",
+      "around: none percentage: 83.33% \n",
+      " * h/a_count: 2\n",
+      " * none_count: 10\n",
+      "\n",
+      "thought: none percentage: 80.00% \n",
+      " * h/a_count: 2\n",
       " * none_count: 8\n",
       "\n",
-      "could: none percentage: 24.14% \n",
-      " * h/a_count: 22\n",
+      "believe: none percentage: 53.85% \n",
+      " * h/a_count: 6\n",
       " * none_count: 7\n",
       "\n",
-      "feel: none percentage: 100.00% \n",
+      "should: none percentage: 35.29% \n",
+      " * h/a_count: 11\n",
+      " * none_count: 6\n",
+      "\n",
+      "feel: none percentage: 83.33% \n",
+      " * h/a_count: 1\n",
+      " * none_count: 5\n",
+      "\n",
+      "best: none percentage: 100.00% \n",
+      " * h/a_count: 0\n",
+      " * none_count: 5\n",
+      "\n",
+      "sure: none percentage: 44.44% \n",
+      " * h/a_count: 5\n",
+      " * none_count: 4\n",
+      "\n",
+      "may: none percentage: 20.00% \n",
+      " * h/a_count: 16\n",
+      " * none_count: 4\n",
+      "\n",
+      "thinking: none percentage: 100.00% \n",
       " * h/a_count: 0\n",
       " * none_count: 4\n",
       "\n",
-      "sure: none percentage: 33.33% \n",
-      " * h/a_count: 8\n",
-      " * none_count: 4\n",
-      "\n",
-      "quite: none percentage: 80.00% \n",
-      " * h/a_count: 1\n",
-      " * none_count: 4\n",
-      "\n",
-      "thought: none percentage: 100.00% \n",
+      "hope: none percentage: 100.00% \n",
       " * h/a_count: 0\n",
       " * none_count: 4\n",
       "\n",
-      "doubt: none percentage: 57.14% \n",
-      " * h/a_count: 3\n",
-      " * none_count: 4\n",
-      "\n",
-      "best: none percentage: 75.00% \n",
-      " * h/a_count: 1\n",
+      "kind of: none percentage: 30.00% \n",
+      " * h/a_count: 7\n",
       " * none_count: 3\n",
       "\n",
-      "should: none percentage: 13.33% \n",
-      " * h/a_count: 13\n",
-      " * none_count: 2\n",
-      "\n",
-      "kind of: none percentage: 40.00% \n",
-      " * h/a_count: 3\n",
-      " * none_count: 2\n",
-      "\n",
-      "fact: none percentage: 12.50% \n",
-      " * h/a_count: 14\n",
-      " * none_count: 2\n",
-      "\n",
-      "may: none percentage: 8.33% \n",
-      " * h/a_count: 22\n",
-      " * none_count: 2\n",
+      "doubt: none percentage: 75.00% \n",
+      " * h/a_count: 1\n",
+      " * none_count: 3\n",
       "\n",
       "hoping: none percentage: 100.00% \n",
       " * h/a_count: 0\n",
       " * none_count: 2\n",
       "\n",
-      "thinking: none percentage: 100.00% \n",
-      " * h/a_count: 0\n",
-      " * none_count: 2\n",
+      "fact: none percentage: 8.33% \n",
+      " * h/a_count: 11\n",
+      " * none_count: 1\n",
       "\n",
-      "clear: none percentage: 22.22% \n",
-      " * h/a_count: 7\n",
-      " * none_count: 2\n",
-      "\n",
-      "view: none percentage: 33.33% \n",
-      " * h/a_count: 4\n",
-      " * none_count: 2\n",
-      "\n",
-      "hope: none percentage: 33.33% \n",
-      " * h/a_count: 4\n",
-      " * none_count: 2\n",
-      "\n",
-      "maybe: none percentage: 14.29% \n",
+      "probably: none percentage: 14.29% \n",
       " * h/a_count: 6\n",
+      " * none_count: 1\n",
+      "\n",
+      "quite: none percentage: 33.33% \n",
+      " * h/a_count: 2\n",
       " * none_count: 1\n",
       "\n",
       "guessing: none percentage: 100.00% \n",
       " * h/a_count: 0\n",
       " * none_count: 1\n",
       "\n",
-      "might: none percentage: 16.67% \n",
-      " * h/a_count: 5\n",
-      " * none_count: 1\n",
-      "\n",
-      "possibly: none percentage: 33.33% \n",
-      " * h/a_count: 2\n",
+      "might: none percentage: 14.29% \n",
+      " * h/a_count: 6\n",
       " * none_count: 1\n",
       "\n",
       "knows: none percentage: 100.00% \n",
       " * h/a_count: 0\n",
+      " * none_count: 1\n",
+      "\n",
+      "clear: none percentage: 25.00% \n",
+      " * h/a_count: 3\n",
+      " * none_count: 1\n",
+      "\n",
+      "view: none percentage: 50.00% \n",
+      " * h/a_count: 1\n",
       " * none_count: 1\n",
       "\n",
       "opinion: none percentage: 100.00% \n",
@@ -876,12 +872,40 @@
       " * h/a_count: 0\n",
       " * none_count: 1\n",
       "\n",
+      "totally: none percentage: 33.33% \n",
+      " * h/a_count: 2\n",
+      " * none_count: 1\n",
+      "\n",
+      "guess: none percentage: 50.00% \n",
+      " * h/a_count: 1\n",
+      " * none_count: 1\n",
+      "\n",
+      "suspects: none percentage: 100.00% \n",
+      " * h/a_count: 0\n",
+      " * none_count: 1\n",
+      "\n",
+      "of course: none percentage: 33.33% \n",
+      " * h/a_count: 2\n",
+      " * none_count: 1\n",
+      "\n",
+      "thinks: none percentage: 50.00% \n",
+      " * h/a_count: 1\n",
+      " * none_count: 1\n",
+      "\n",
+      "believes: none percentage: 100.00% \n",
+      " * h/a_count: 0\n",
+      " * none_count: 1\n",
+      "\n",
       "definitely: none percentage: 0.00% \n",
-      " * h/a_count: 3\n",
+      " * h/a_count: 5\n",
       " * none_count: 0\n",
       "\n",
       "seems: none percentage: 0.00% \n",
-      " * h/a_count: 2\n",
+      " * h/a_count: 5\n",
+      " * none_count: 0\n",
+      "\n",
+      "maybe: none percentage: 0.00% \n",
+      " * h/a_count: 12\n",
       " * none_count: 0\n",
       "\n",
       "stuff: none percentage: 0.00% \n",
@@ -889,31 +913,31 @@
       " * none_count: 0\n",
       "\n",
       "sort of: none percentage: 0.00% \n",
-      " * h/a_count: 4\n",
+      " * h/a_count: 11\n",
       " * none_count: 0\n",
       "\n",
       "appear: none percentage: 0.00% \n",
       " * h/a_count: 2\n",
       " * none_count: 0\n",
       "\n",
-      "probably: none percentage: 0.00% \n",
-      " * h/a_count: 5\n",
-      " * none_count: 0\n",
-      "\n",
       "confident: none percentage: 0.00% \n",
-      " * h/a_count: 3\n",
+      " * h/a_count: 2\n",
       " * none_count: 0\n",
       "\n",
       "absolutely: none percentage: 0.00% \n",
-      " * h/a_count: 5\n",
+      " * h/a_count: 3\n",
       " * none_count: 0\n",
       "\n",
       "suppose: none percentage: 0.00% \n",
-      " * h/a_count: 4\n",
+      " * h/a_count: 1\n",
       " * none_count: 0\n",
       "\n",
       "perhaps: none percentage: 0.00% \n",
-      " * h/a_count: 3\n",
+      " * h/a_count: 4\n",
+      " * none_count: 0\n",
+      "\n",
+      "possibly: none percentage: 0.00% \n",
+      " * h/a_count: 1\n",
       " * none_count: 0\n",
       "\n",
       "reportedly: none percentage: 0.00% \n",
@@ -940,20 +964,12 @@
       " * h/a_count: 2\n",
       " * none_count: 0\n",
       "\n",
-      "seem: none percentage: 0.00% \n",
-      " * h/a_count: 4\n",
+      "appears: none percentage: 0.00% \n",
+      " * h/a_count: 1\n",
       " * none_count: 0\n",
       "\n",
       "certainly: none percentage: 0.00% \n",
       " * h/a_count: 3\n",
-      " * none_count: 0\n",
-      "\n",
-      "must: none percentage: 0.00% \n",
-      " * h/a_count: 1\n",
-      " * none_count: 0\n",
-      "\n",
-      "totally: none percentage: 0.00% \n",
-      " * h/a_count: 1\n",
       " * none_count: 0\n",
       "\n"
      ]
@@ -963,16 +979,18 @@
     "import json\n",
     "\n",
     "# Sample JSON data\n",
+    "# with open('data/new_filtered_utterances_to_grade/filtered_data_MW_part_2.json', 'r') as prev_grade:\n",
+    "#     prev_grade2 = json.load(prev_grade)\n",
     "with open('data/new_filtered_utterances_to_grade/filtered_data_MW_part_3.json', 'r') as prev_grade:\n",
-    "    prev_grade1 = json.load(prev_grade)\n",
-    "with open('data/new_filtered_utterances_to_grade/filtered_data_MW_part_2.json', 'r') as prev_grade:\n",
-    "    prev_grade2 = prev_grade1+json.load(prev_grade)\n",
+    "    prev_grade3 = json.load(prev_grade)\n",
+    "with open('data/new_filtered_utterances_to_grade/filtered_data_MW_part_4.json', 'r') as prev_grade:\n",
+    "    prev_grade4 = prev_grade3+json.load(prev_grade)\n",
     "\n",
     "# Dictionary to store the count of each term for each category\n",
     "term_count = {}\n",
     "\n",
     "# Iterate through each item in the data\n",
-    "for item in prev_grade2:\n",
+    "for item in prev_grade4:\n",
     "    matched_terms = item['matched_terms']\n",
     "    for term, category in matched_terms.items():\n",
     "        # Initialize the term dictionary if not already present\n",
@@ -999,6 +1017,51 @@
     "        if k == \"none\":\n",
     "            none_count += v\n",
     "    print(f\"{item}: none percentage: {none_count/sample_count*100:.2f}% \\n * h/a_count: {sample_count-none_count}\\n * none_count: {none_count}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category: none, Count: 198\n",
+      "Category: hedge, Count: 163\n",
+      "Category: authority, Count: 73\n",
+      "Total: 434, None Rate: 45.62%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary to store the count of each category across all terms\n",
+    "category_count = {}\n",
+    "\n",
+    "# Iterate through each item in the data\n",
+    "for item in prev_grade4:\n",
+    "    matched_terms = item['matched_terms']\n",
+    "    for term, category in matched_terms.items():\n",
+    "        # Initialize the category count if not already present\n",
+    "        if category not in category_count:\n",
+    "            category_count[category] = 0\n",
+    "        # Increment the count for this category\n",
+    "        category_count[category] += 1\n",
+    "\n",
+    "# Sort the categories based on their count, descending\n",
+    "sorted_category_count = dict(sorted(category_count.items(), key=lambda item: item[1], reverse=True))\n",
+    "\n",
+    "# Output the sorted category count\n",
+    "for category, count in sorted_category_count.items():\n",
+    "    if category == \"hedge\":\n",
+    "        hedge = count\n",
+    "    if category == \"authority\":\n",
+    "        auth = count\n",
+    "    if category == \"none\":\n",
+    "        none = count\n",
+    "    print(f\"Category: {category}, Count: {count}\")\n",
+    "print(f\"Total: {hedge+auth+none}, None Rate: {none/(hedge+auth+none)*100:.2f}%\")"
    ]
   }
  ],
